Fixed overflow issue and cleaned up html file

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -88,7 +88,7 @@ footer {
 
 .storeLocRes {
     width: 90%;
-    height: 62vh;
+    height: 55vh;
     overflow: scroll;
 }
 
